Added 8 new variables

--- a/data_aggregation.ipynb
+++ b/data_aggregation.ipynb
@@ -11,26 +11,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import re \n",
     "\n",
-    "missing_values_mapping = {'.z' : -3, '.c' : -2, '.m' : -1}\n",
+    "missing_values_mapping = {'.z' : -2000, '.c' : -1000, '.m' : -100}\n",
     "\n",
     "def mapping(x):\n",
     "    try:\n",
     "        return missing_values_mapping[x]\n",
     "    except:\n",
-    "        return x"
+    "        return x\n",
+    "    \n",
+    "def format_decimal(x):\n",
+    "    return x.replace(',','.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -45,14 +49,13 @@
       "Année 2010 traitée\n",
       "Année 2011 traitée\n",
       "Année 2012 traitée\n",
-      "Année 2013 traitée\n",
-      "Année 2014 traitée\n",
-      "Année 2015 traitée\n"
+      "Année 2013 traitée\n"
      ]
     }
    ],
    "source": [
-    "years = [str(i) for i in range(2008, 2016)]\n",
+    "# Nous n'avons pas besoin de 2015 et 2016 qui sont dans le test set\n",
+    "years = [str(i) for i in range(2008, 2014)]\n",
     "\n",
     "aggregated_dataframes = {}\n",
     "\n",
@@ -61,8 +64,12 @@
     "\n",
     "    for col in df.columns:\n",
     "        df[col] = df[col].map(mapping)\n",
-    "\n",
-    "    df.fillna(-4, inplace=True)\n",
+    "        \n",
+    "    for col in ['A7', 'A8', 'A9', 'A10', 'A11', 'A12', 'A13', 'A14', 'A15']:\n",
+    "        df[col] = df[col].map(str)\n",
+    "        df[col] = df[col].map(format_decimal).fillna(-3000).map(float)\n",
+    "    \n",
+    "    df.fillna(-3000, inplace=True)\n",
     "    df['annee'] = y\n",
     "    aggregated_dataframes[y] = df\n",
     "    print('Année', y, 'traitée')\n",
@@ -73,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -81,10 +88,10 @@
     {
      "data": {
       "text/plain": [
-       "161"
+       "407"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -105,21 +112,22 @@
     {
      "data": {
       "text/plain": [
-       "array(['CI_A1', 'CI_A10', 'CI_A11', 'CI_A12', 'CI_A14', 'CI_A15', 'CI_A2',\n",
-       "       'CI_A3', 'CI_A4', 'CI_A5', 'CI_A6', 'CI_A7', 'CI_A8', 'CI_A9',\n",
-       "       'CI_AC1', 'CI_AC2', 'CI_AC3', 'CI_AC4', 'CI_AC5', 'CI_AC6',\n",
-       "       'CI_AC7', 'CI_AC8', 'CI_AC9', 'CI_DF1', 'CI_DF2', 'CI_DF3',\n",
-       "       'CI_DF4', 'CI_DF5', 'CI_E1', 'CI_E2', 'CI_E3', 'CI_E4', 'CI_E4_V2',\n",
-       "       'CI_E5', 'CI_E6', 'CI_E7', 'CI_E7_V2', 'CI_F10_D', 'CI_F10_O',\n",
-       "       'CI_F11_D', 'CI_F11_O', 'CI_F12_D', 'CI_F12_O', 'CI_F13_D',\n",
-       "       'CI_F13_O', 'CI_F14_D', 'CI_F14_O', 'CI_F15_D', 'CI_F15_O',\n",
-       "       'CI_F16_D', 'CI_F16_O', 'CI_F1_D', 'CI_F1_O', 'CI_F2_D', 'CI_F2_O',\n",
-       "       'CI_F3_D', 'CI_F3_O', 'CI_F4_D', 'CI_F4_O', 'CI_F5_D', 'CI_F5_O',\n",
-       "       'CI_F6_D', 'CI_F6_O', 'CI_F7_D', 'CI_F7_O', 'CI_F8_D', 'CI_F8_O',\n",
-       "       'CI_F9_D', 'CI_F9_O', 'P8', 'P8new', 'P9', 'RH1'], dtype=object)"
+       "array(['A10', 'A11', 'A12', 'A13', 'A14', 'A15', 'A7', 'A8', 'A9', 'CI_A1',\n",
+       "       'CI_A10', 'CI_A11', 'CI_A12', 'CI_A14', 'CI_A15', 'CI_A2', 'CI_A3',\n",
+       "       'CI_A4', 'CI_A5', 'CI_A6', 'CI_A7', 'CI_A8', 'CI_A9', 'CI_AC1',\n",
+       "       'CI_AC2', 'CI_AC3', 'CI_AC4', 'CI_AC5', 'CI_AC6', 'CI_AC7',\n",
+       "       'CI_AC8', 'CI_AC9', 'CI_DF1', 'CI_DF2', 'CI_DF3', 'CI_DF4',\n",
+       "       'CI_DF5', 'CI_E1', 'CI_E2', 'CI_E3', 'CI_E4', 'CI_E4_V2', 'CI_E5',\n",
+       "       'CI_E6', 'CI_E7', 'CI_E7_V2', 'CI_F10_D', 'CI_F10_O', 'CI_F11_D',\n",
+       "       'CI_F11_O', 'CI_F12_D', 'CI_F12_O', 'CI_F13_D', 'CI_F13_O',\n",
+       "       'CI_F14_D', 'CI_F14_O', 'CI_F15_D', 'CI_F15_O', 'CI_F16_D',\n",
+       "       'CI_F16_O', 'CI_F1_D', 'CI_F1_O', 'CI_F2_D', 'CI_F2_O', 'CI_F3_D',\n",
+       "       'CI_F3_O', 'CI_F4_D', 'CI_F4_O', 'CI_F5_D', 'CI_F5_O', 'CI_F6_D',\n",
+       "       'CI_F6_O', 'CI_F7_D', 'CI_F7_O', 'CI_F8_D', 'CI_F8_O', 'CI_F9_D',\n",
+       "       'CI_F9_O', 'P8', 'P8new', 'P9', 'RH1'], dtype=object)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,13 +138,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['A10', 'A11', 'A12', 'A13', 'A14', 'A15', 'A7', 'A8', 'A9', 'CI_A1',\n",
+       "       ...\n",
+       "       'annee', 'cat', 'champ_pmsi', 'finess', 'rs', 'taa', 'taille_C',\n",
+       "       'taille_M', 'taille_MCO', 'taille_O'],\n",
+       "      dtype='object', length=179)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A10           float64\n",
+       "A11           float64\n",
+       "A12           float64\n",
+       "A13           float64\n",
+       "A14           float64\n",
+       "A15           float64\n",
+       "A7            float64\n",
+       "A8            float64\n",
+       "A9            float64\n",
+       "CI_A1         float64\n",
+       "CI_A10        float64\n",
+       "CI_A11        float64\n",
+       "CI_A12        float64\n",
+       "CI_A13         object\n",
+       "CI_A14        float64\n",
+       "CI_A15        float64\n",
+       "CI_A16_1       object\n",
+       "CI_A16_2       object\n",
+       "CI_A16_3       object\n",
+       "CI_A16_4       object\n",
+       "CI_A16_5       object\n",
+       "CI_A16_6       object\n",
+       "CI_A17_1       object\n",
+       "CI_A17_2       object\n",
+       "CI_A17_3       object\n",
+       "CI_A17_4       object\n",
+       "CI_A17_5       object\n",
+       "CI_A18_1       object\n",
+       "CI_A18_2       object\n",
+       "CI_A18_3       object\n",
+       "               ...   \n",
+       "Q1             object\n",
+       "Q10            object\n",
+       "Q11            object\n",
+       "Q2             object\n",
+       "Q3             object\n",
+       "Q4             object\n",
+       "Q5             object\n",
+       "Q6             object\n",
+       "Q7             object\n",
+       "Q8             object\n",
+       "Q9             object\n",
+       "RH1           float64\n",
+       "RH10           object\n",
+       "RH2            object\n",
+       "RH3            object\n",
+       "RH4            object\n",
+       "RH5            object\n",
+       "RH6            object\n",
+       "RH8            object\n",
+       "RH9            object\n",
+       "annee          object\n",
+       "cat            object\n",
+       "champ_pmsi     object\n",
+       "finess         object\n",
+       "rs             object\n",
+       "taa            object\n",
+       "taille_C       object\n",
+       "taille_M       object\n",
+       "taille_MCO     object\n",
+       "taille_O       object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "reduced_result = result[['CI_A1', 'CI_A10', 'CI_A11', 'CI_A12', 'CI_A14', 'CI_A15', 'CI_A2',\n",
+    "reduced_result = result[['A7', 'A8', 'A9', 'A10', 'A11', 'A12', 'A13', 'A14', 'A15',\n",
+    "                        'CI_A1', 'CI_A10', 'CI_A11', 'CI_A12', 'CI_A14', 'CI_A15', 'CI_A2',\n",
     "                        'CI_A3', 'CI_A4', 'CI_A5', 'CI_A6', 'CI_A7', 'CI_A8', 'CI_A9',\n",
     "                        'CI_AC1', 'CI_AC2', 'CI_AC3', 'CI_AC4', 'CI_AC5', 'CI_AC6',\n",
     "                        'CI_AC7', 'CI_AC8', 'CI_AC9', 'CI_DF1', 'CI_DF2', 'CI_DF3',\n",
@@ -152,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -178,16 +296,16 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th>A7</th>\n",
+       "      <th>A8</th>\n",
+       "      <th>A9</th>\n",
+       "      <th>A10</th>\n",
+       "      <th>A11</th>\n",
+       "      <th>A12</th>\n",
+       "      <th>A13</th>\n",
+       "      <th>A14</th>\n",
+       "      <th>A15</th>\n",
        "      <th>CI_A1</th>\n",
-       "      <th>CI_A10</th>\n",
-       "      <th>CI_A11</th>\n",
-       "      <th>CI_A12</th>\n",
-       "      <th>CI_A14</th>\n",
-       "      <th>CI_A15</th>\n",
-       "      <th>CI_A2</th>\n",
-       "      <th>CI_A3</th>\n",
-       "      <th>CI_A4</th>\n",
-       "      <th>CI_A5</th>\n",
        "      <th>...</th>\n",
        "      <th>CI_F8_O</th>\n",
        "      <th>CI_F9_D</th>\n",
@@ -205,70 +323,70 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">2008</th>\n",
        "      <th>0</th>\n",
+       "      <td>-1000.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-2000.0</td>\n",
+       "      <td>-2000.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1302.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1301.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>-2000.0</td>\n",
+       "      <td>-3000.0</td>\n",
        "      <td>53553.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
        "      <td>108.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>-3000.0</td>\n",
        "      <td>010007300</td>\n",
        "      <td>2008</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>-1000.0</td>\n",
+       "      <td>5.03</td>\n",
+       "      <td>12.58</td>\n",
+       "      <td>-2000.0</td>\n",
+       "      <td>-2000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>67.2</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
        "      <td>158.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
        "      <td>010007987</td>\n",
        "      <td>2008</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>-1000.0</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>3.97</td>\n",
+       "      <td>-2000.0</td>\n",
+       "      <td>-2000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>87.7</td>\n",
+       "      <td>79.4</td>\n",
+       "      <td>56.2</td>\n",
        "      <td>4269.0</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>765.0</td>\n",
-       "      <td>2479.0</td>\n",
-       "      <td>1043.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>1481.0</td>\n",
-       "      <td>1023.0</td>\n",
-       "      <td>1338.0</td>\n",
-       "      <td>1059.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
        "      <td>1064456.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>-3000.0</td>\n",
        "      <td>187335.0</td>\n",
        "      <td>39.0</td>\n",
        "      <td>010008407</td>\n",
@@ -277,22 +395,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>-1000.0</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>7.67</td>\n",
+       "      <td>-2000.0</td>\n",
+       "      <td>-2000.0</td>\n",
+       "      <td>44.8</td>\n",
+       "      <td>79.9</td>\n",
+       "      <td>78.4</td>\n",
+       "      <td>61.4</td>\n",
        "      <td>13685.0</td>\n",
-       "      <td>1307.0</td>\n",
-       "      <td>2041.0</td>\n",
-       "      <td>5778.0</td>\n",
-       "      <td>2677.0</td>\n",
-       "      <td>142.0</td>\n",
-       "      <td>4592.0</td>\n",
-       "      <td>2461.0</td>\n",
-       "      <td>3997.0</td>\n",
-       "      <td>1425.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
        "      <td>735002.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>-3000.0</td>\n",
        "      <td>208714.0</td>\n",
        "      <td>39.0</td>\n",
        "      <td>010780054</td>\n",
@@ -301,22 +419,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>-1000.0</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>6.04</td>\n",
+       "      <td>-2000.0</td>\n",
+       "      <td>-2000.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>71.8</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>65.1</td>\n",
        "      <td>4233.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>552.0</td>\n",
-       "      <td>1883.0</td>\n",
-       "      <td>1089.0</td>\n",
-       "      <td>112.0</td>\n",
-       "      <td>1668.0</td>\n",
-       "      <td>636.0</td>\n",
-       "      <td>910.0</td>\n",
-       "      <td>445.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
+       "      <td>-3000.0</td>\n",
        "      <td>438670.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>-3000.0</td>\n",
        "      <td>209990.0</td>\n",
        "      <td>46.0</td>\n",
        "      <td>010780062</td>\n",
@@ -325,35 +443,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 76 columns</p>\n",
+       "<p>5 rows × 85 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          CI_A1  CI_A10  CI_A11  CI_A12  CI_A14  CI_A15   CI_A2   CI_A3  \\\n",
-       "2008 0      0.0     0.0     0.0     1.0  1302.0     3.0     0.0     0.0   \n",
-       "     1    158.0     0.0     0.0     0.0     2.0    14.0     1.0     0.0   \n",
-       "     2   4269.0   120.0   765.0  2479.0  1043.0   101.0  1481.0  1023.0   \n",
-       "     3  13685.0  1307.0  2041.0  5778.0  2677.0   142.0  4592.0  2461.0   \n",
-       "     4   4233.0    40.0   552.0  1883.0  1089.0   112.0  1668.0   636.0   \n",
+       "            A7    A8     A9     A10     A11     A12     A13     A14     A15  \\\n",
+       "2008 0 -1000.0  0.00   0.00 -2000.0 -2000.0 -3000.0 -3000.0 -3000.0 -3000.0   \n",
+       "     1 -1000.0  5.03  12.58 -2000.0 -2000.0     0.0    67.2 -3000.0 -3000.0   \n",
+       "     2 -1000.0  0.76   3.97 -2000.0 -2000.0     0.0    87.7    79.4    56.2   \n",
+       "     3 -1000.0  1.98   7.67 -2000.0 -2000.0    44.8    79.9    78.4    61.4   \n",
+       "     4 -1000.0  0.69   6.04 -2000.0 -2000.0    36.0    71.8    74.0    65.1   \n",
        "\n",
-       "         CI_A4   CI_A5 ...   CI_F8_O  CI_F9_D  CI_F9_O         P8  P8new  \\\n",
-       "2008 0  1301.0     1.0 ...      -3.0     -4.0  53553.0       -4.0   -4.0   \n",
-       "     1     0.0     0.0 ...      -4.0     -4.0     -4.0       -4.0   -4.0   \n",
-       "     2  1338.0  1059.0 ...      -4.0     -4.0     -4.0  1064456.0   -4.0   \n",
-       "     3  3997.0  1425.0 ...      -4.0     -4.0     -4.0   735002.0   -4.0   \n",
-       "     4   910.0   445.0 ...      -4.0     -4.0     -4.0   438670.0   -4.0   \n",
+       "          CI_A1 ...   CI_F8_O  CI_F9_D  CI_F9_O         P8   P8new        P9  \\\n",
+       "2008 0      0.0 ...   -2000.0  -3000.0  53553.0    -3000.0 -3000.0     108.0   \n",
+       "     1    158.0 ...   -3000.0  -3000.0  -3000.0    -3000.0 -3000.0   -3000.0   \n",
+       "     2   4269.0 ...   -3000.0  -3000.0  -3000.0  1064456.0 -3000.0  187335.0   \n",
+       "     3  13685.0 ...   -3000.0  -3000.0  -3000.0   735002.0 -3000.0  208714.0   \n",
+       "     4   4233.0 ...   -3000.0  -3000.0  -3000.0   438670.0 -3000.0  209990.0   \n",
        "\n",
-       "              P9   RH1     finess  annee  cat  \n",
-       "2008 0     108.0  -4.0  010007300   2008    3  \n",
-       "     1      -4.0  -4.0  010007987   2008    0  \n",
-       "     2  187335.0  39.0  010008407   2008    0  \n",
-       "     3  208714.0  39.0  010780054   2008    0  \n",
-       "     4  209990.0  46.0  010780062   2008    0  \n",
+       "           RH1     finess  annee  cat  \n",
+       "2008 0 -3000.0  010007300   2008    3  \n",
+       "     1 -3000.0  010007987   2008    0  \n",
+       "     2    39.0  010008407   2008    0  \n",
+       "     3    39.0  010780054   2008    0  \n",
+       "     4    46.0  010780062   2008    0  \n",
        "\n",
-       "[5 rows x 76 columns]"
+       "[5 rows x 85 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
