--- a/data_aggregation.ipynb
+++ b/data_aggregation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -88,10 +88,10 @@
     {
      "data": {
       "text/plain": [
-       "407"
+       "77"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +127,7 @@
        "       'CI_F9_O', 'P8', 'P8new', 'P9', 'RH1'], dtype=object)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +153,7 @@
        "      dtype='object', length=179)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -236,7 +236,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -471,7 +471,7 @@
        "[5 rows x 85 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -493,6 +493,15 @@
    "source": [
     "reduced_result.to_csv('../data/aggregated_hospidiag_data_reduced.csv', encoding='utf-8', sep=';')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
